add connected device wallet discovery with configurable number of accounts to scan